Add NeDB -> npm install --save nedb feathers-nedb
Co-Authored-By: Edward Almanzar <edward@menteware.com>

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@feathersjs/express": "^4.3.5",
     "@feathersjs/feathers": "^4.3.4",
-    "@feathersjs/socketio": "^4.3.5"
+    "@feathersjs/socketio": "^4.3.5",
+    "feathers-nedb": "^5.1.0",
+    "nedb": "^1.8.0"
   }
 }
